ruka-lang.org/src/lib/interpreter/fixtures/type-err/wrong-arity.ruka
// expect: expected 1 arg(s), got 2
let f = (x) do x + 1
let main = () do f(1, 2)
